# urbafoam

./: .gitattributes  .gitignore  README.rst  postProcess.py  pyproject.toml  urbafoam.py
tests/: test_urbafoam.py
tests/testdata/: building_curved_surface.stl  buildings.dbf  buildings.shp  buildings.shx  buildings_small.stl
urbafoam/: BlockMesh.py  BuildingFootprints.py  BuildingMesh.py  Config.py  Controls.py  DataConversion.py  DataIO.py  Enums.py  InitialConditions.py  Mesh.py  PostProcess.py  SamplePoints.py  Scheme.py  SetupCase.py  SnappyHexMesh.py  __init__.py  windProfile.py
urbafoam/templates/: Allclean  Allrun  RunMeshing  RunPostProc  RunSim
urbafoam/templates/0.orig/: U_potentialFoam  U_simpleFoam  epsilon  k_potentialFoam  k_simpleFoam  nut  omega  p
urbafoam/templates/0.orig/include/: ABLConditions  initialConditions  setConstraintTypes
urbafoam/templates/0.orig/orig/: U
urbafoam/templates/constant/: RASProperties  transportProperties  turbulenceProperties
urbafoam/templates/system/: controlDict  decomposeParDict  fvSchemes  fvSolution  readFields  sampleDict  sampleDict_pointcloud  snappyHexMeshDict  surfaceFeatureExtractDict  surfaceFeaturesDict
urbafoam/templates/system/etc/: meshQualityDict  snappyHexMeshDict.cfg
