[tool.poetry]
name = "urbafoam"
version = "0.1.0"
description = ""
authors = ["Dag Wastberg<dwastberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
numpy-stl = "^2.11.2"
ofblockmeshdicthelper = "^0.2.0"
pystache = "^0.5.4"
shapely = "^1.7.1"
pytoml = "^0.1.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
