[tool.poetry]
name = "urbafoam"
version = "0.1.0"
description = ""
authors = ["Dag Wästberg <dwastberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
numpy-stl = "^2.11.2"
ofblockmeshdicthelper = "^0.2.0"
pystache = "^0.5.4"
shapely = "^1.7.1"
toml = "^0.10.1"
scipy = "^1.5.2"
fiona = "^1.8.17"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[tool.poetry.scripts]
urbafoam = 'urbafoam:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
